--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,6 @@
 [versions]
-agp = "8.9.3"
-kotlin = "2.1.0"
+agp = "8.9.2"
+kotlin = "2.0.0"
 coreKtx = "1.16.0"
 junit = "4.13.2"
 junitVersion = "1.2.1"
@@ -8,25 +8,26 @@ espressoCore = "3.6.1"
 appcompat = "1.7.0"
 material = "1.12.0"
 constraintlayout = "2.2.1"
-
+jetbrainsKotlinJvm = "2.0.0"
 nav = "2.9.0"
 lifecycle = "2.9.0"
-coroutines = "1.9.0"
+coroutines = "1.7.3"
 recyclerview = "1.4.0"
-room = "2.7.1"
-work = "2.10.1"
+room = "2.6.1"
+work = "2.9.0"
 retrofit = "2.11.0"
 okhttp = "4.12.0"
 dagger = "2.51"
 glide = "4.16.0"
 rxjava3 = "3.1.8"
 rxandroid = "3.0.2"
-firebaseBom = "33.14.0"
+firebaseBom = "32.7.0"
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 google-services = { id = "com.google.gms.google-services", version = "4.4.2" }
+jetbrains-kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "jetbrainsKotlinJvm" }
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
