--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,15 +10,26 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/icon"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/icon"
         android:supportsRtl="true"
         android:theme="@style/Theme.EveryNoiseAtOnce"
         tools:targetApi="31">
+        <activity android:name=".presentation.auth.LoginActivity" />
+        <activity android:name=".presentation.auth.RegisterActivity" />
         <activity
-            android:name=".MainActivity"
+            android:name=".presentation.SplashActivity"
             android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".presentation.activity.MainActivity"
+            android:exported="true"
+            android:theme="@style/Theme.EveryNoiseAtOnce">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
