csv of genres from everynoise added, search logic added

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -9,6 +9,7 @@ appcompat = "1.7.0"
 material = "1.12.0"
 constraintlayout = "2.2.1"
 jetbrainsKotlinJvm = "2.0.0"
+moshiKotlin = "1.15.0"
 nav = "2.9.0"
 lifecycle = "2.9.0"
 coroutines = "1.7.3"
@@ -56,6 +57,7 @@ androidx-room-compiler = { group = "androidx.room", name = "room-compiler", vers
 androidx-work-runtime-ktx = { group = "androidx.work", name = "work-runtime-ktx", version.ref = "work" }
 
 # Retrofit + Moshi + OkHttp
+moshi-kotlin = { module = "com.squareup.moshi:moshi-kotlin", version.ref = "moshiKotlin" }
 retrofit2-retrofit        = { group = "com.squareup.retrofit2", name = "retrofit", version.ref = "retrofit" }
 retrofit2-converter-moshi = { group = "com.squareup.retrofit2", name = "converter-moshi", version.ref = "retrofit" }
 okhttp3-okhttp             = { group = "com.squareup.okhttp3", name = "okhttp", version.ref = "okhttp" }
