--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE_MEDIA_PLAYBACK" />
+
     <application
         android:name=".EveryNoiseApp"
         android:allowBackup="true"
@@ -16,6 +17,14 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.EveryNoiseAtOnce"
         tools:targetApi="31">
+        <service
+            android:name=".utils.MyFirebaseMessagingService"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+            </intent-filter>
+        </service>
+
         <activity android:name=".presentation.auth.LoginActivity" />
         <activity android:name=".presentation.auth.RegisterActivity" />
         <activity
