--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -23,6 +23,7 @@ glide = "4.16.0"
 rxjava3 = "3.1.8"
 rxandroid = "3.0.2"
 firebaseBom = "32.7.0"
+media3Exoplayer = "1.7.1"
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
@@ -85,3 +86,4 @@ firebase-crashlytics-ktx = { group = "com.google.firebase", name = "firebase-cra
 junit                   = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-junit          = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
 androidx-espresso-core  = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
+androidx-media3-exoplayer = { group = "androidx.media3", name = "media3-exoplayer", version.ref = "media3Exoplayer" }
