--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.EveryNoiseAtOnce"
         tools:targetApi="31">
+        <service
+            android:name=".service.PlayerService"
+            android:exported="false"
+            android:foregroundServiceType="mediaPlayback" />
 
         <activity android:name=".presentation.auth.LoginActivity" />
         <activity android:name=".presentation.auth.RegisterActivity" />
